--- a/style.css
+++ b/style.css
@@ -20,12 +20,12 @@
 .nav a {
     text-decoration: none;
 }
-.nav a h2:hover {
+#logo:hover {
     color: #ff5733;
     cursor: pointer;
 }
 
-.nav h2 {
+#logo {
     color: #fff;
     font-size: 1.7rem;
 }
@@ -63,6 +63,47 @@
 #item .icon a i:hover {
     color: #ff5733;
     cursor: pointer;
+}
+
+.toggle-button {
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+@media (max-width: 600px) {
+    .toggle-button {
+        display: flex;
+    }
+    #item {
+        display: none;
+    }
+    .nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    #item {
+        width: 100%;
+        flex-direction: column;
+    }
+    li {
+        text-align: center;
+    }
+    #item.active {
+        display: flex;
+    }
 }
 
 .back {
