--- a/style.css
+++ b/style.css
@@ -65,23 +65,16 @@
     cursor: pointer;
 }
 
-.toggle-button {
+#bar {
+    color: #ff5733;
+    font-weight: lighter;
+    font-size: 1.5rem;
     position: absolute;
-    top: .75rem;
-    right: 1rem;
+    top: 35%;
+    right: 7%;
     display: none;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 21px;
-}
-
-.toggle-button .bar {
-    height: 3px;
-    width: 100%;
-    background-color: #fff;
-    border-radius: 10px;
-}
+    cursor: pointer;
+  }
 
 .back {
     background-image: url(homeBackground.jpg);
@@ -341,3 +334,324 @@
     color: #ff5733;
     padding-right: 4px;
 }
+
+@media screen and (max-width: 1042px) {
+    .nav {
+      padding: 1rem 4.5rem;
+    }
+  
+    .nav h2 {
+      font-size: 1.4rem;
+    }
+  
+    #item li {
+      padding-right: 30px;
+    }
+  
+    #item li a {
+      font-size: 0.9rem;
+    }
+  
+    #item i {
+      padding-right: 20px;
+    }
+  }
+
+  @media screen and (max-width: 991px) {
+    .nav {
+      padding: 1rem 3rem;
+    }
+    .nav h2 {
+      font-size: 1.6rem;
+    }
+  
+    #item {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      position: fixed;
+      top: 0;
+      right: -300px;
+      width: 300px;
+      height: 100vh;
+      background: rgba(0, 0, 0, 0.8);
+      z-index: 10000;
+      margin-top: 4.2rem;
+      transition: 0.5s;
+    }
+  
+    #item li {
+      padding-right: 0;
+      padding: 4px 0;
+    }
+  
+    #item li a {
+      font-size: 1.2rem;
+    }
+  
+    #item .icon {
+      padding-top: 20px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+    #item .icon i {
+      padding: 0 15px 0 15px;
+    }
+  
+    #bar {
+      display: initial;
+    }
+  
+    .mid p {
+      font-size: 1.1rem;
+      margin-bottom: 1.2rem;
+    }
+  
+    .mid h2 {
+      font-size: 2.5rem;
+    }
+    .mid .btn {
+      margin-top: 1.5rem;
+    }
+    .mid .btn a {
+      font-size: 0.9rem;
+    }
+    .mid .btn a.borderless {
+      padding: 0.7rem 1.4rem;
+    }
+  
+    .mid .btn a.border {
+      padding: 0.7rem 1.4rem;
+    }
+  
+    .about {
+      padding: 6rem 7rem;
+    }
+    .about .one {
+      width: 50%;
+    }
+  
+    .about .one h3 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+  
+    .about .one h6 {
+      font-size: 1.3rem;
+      font-weight: 400;
+      margin-bottom: 1.2rem;
+    }
+    .about .one p {
+      font-size: 1.1rem;
+      margin-bottom: 2.2rem;
+    }
+  
+    .about .one a {
+      font-size: 0.9rem;
+    }
+  
+    .about .two {
+      padding-left: 3.5rem;
+    }
+  
+    .about .two h3 {
+      font-size: 2rem;
+    }
+  
+    .about .two h5 {
+      font-size: 1rem;
+    }
+  
+    .about .two p {
+      font-size: 1rem;
+      margin-bottom: 0.6rem;
+    }
+
+    .programSection h2 {
+      font-size: 2rem;
+      padding-bottom: 1.4rem;
+    }
+  
+    .programDetails .details p {
+        height: 150px;
+        overflow-y: auto;
+        font-size: 1rem;
+      }
+  
+    .contact {
+      padding: 6rem;
+    }
+    .contact .form h2 {
+      font-size: 2rem;
+      padding-bottom: 7px;
+    }
+  
+    .contact .form .submit input,
+    textarea {
+      padding: 12px;
+      margin: 10px 0;
+    }
+  
+    .contact .form .submit input::placeholder {
+      font-size: 1rem;
+    }
+    .contact .form .submit textarea {
+      font-size: 1rem;
+    }
+  
+    .contact .form a {
+      padding: 13px 0;
+      margin: 10px 0;
+      font-size: 1rem;
+    }
+  
+    .contact .map h2 {
+      font-size: 2rem;
+      padding-bottom: 7px;
+    }
+  
+    .contact .map p {
+      font-size: 1rem;
+      padding-bottom: 20px;
+    }
+    .contact .map p i {
+      padding-right: 4px;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .nav h2 {
+      font-size: 1.5rem;
+    }
+  
+    .back {
+      background-position: center;
+    }
+  
+    .mid p {
+      font-size: 1rem;
+      margin-bottom: 1rem;
+    }
+  
+    .mid h2 {
+      font-size: 2.1rem;
+    }
+    .mid .btn {
+      margin-top: 1rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .mid .btn a {
+      font-size: 0.9rem;
+    }
+    .mid .btn a.borderless {
+      padding: 0.7rem 1.4rem;
+      margin-bottom: 7px;
+    }
+  
+    .about {
+      padding: 5rem 2rem;
+      flex-direction: column;
+      justify-content: center;
+    }
+    .about .one {
+      width: 70%;
+    }
+  
+    .about .one a {
+      font-size: 1rem;
+    }
+  
+    .about .two {
+      padding-left: 0;
+      border-left: 0;
+      border-top: 1px solid #666262;
+      width: 70%;
+      margin-top: 1.7rem;
+      padding-top: 1.7rem;
+    }
+  
+    .programSection .programs {
+      padding: 5rem 2rem;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    .programDetails .details p {
+        height: 150px;
+        overflow-y: auto;
+      }
+  
+    .contact {
+      padding: 5rem 2rem;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+    .contact .form {
+      width: 70%;
+    }
+  
+    .contact .form h2 {
+      font-size: 2.5rem;
+    }
+  
+    .contact .map {
+      width: 60%;
+      margin-top: 20px;
+      margin: auto;
+    }
+  }
+
+  @media screen and (max-width: 496px) {
+    .nav h2 {
+      font-size: 1.5rem;
+    }
+  
+    .mid p {
+      margin-bottom: 0.8rem;
+    }
+  
+    .mid h2 {
+      font-size: 1.8rem;
+    }
+  
+    .about {
+      padding: 4rem 1rem;
+      flex-direction: column;
+      justify-content: center;
+    }
+    .about .one {
+      width: 100%;
+    }
+    .about .two {
+      width: 100%;
+    }
+  
+    .programSection {
+        display: none;
+    }
+  
+    .contact {
+      padding: 4rem 1rem;
+    }
+    .contact .form {
+      width: 100%;
+    }
+  
+    .contact .map {
+      width: 100%;
+    }
+
+    .contact .map h2 {
+        font-size: larger;
+        padding: 1rem 0;
+        text-decoration: underline;
+    }
+  }
